[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "tsim"
description = "Robust confidence estimation in semi-supervised learning."

dynamic = ["version", "readme", "dependencies"]
license = { text = "GNU General Public License v3 or later (GPLv3+)" }
requires-python = ">=3.7"
authors = [
    { name = "Ambroise Odonnat", email = "ambroiseodonnattechnologie@gmail.com" },
]
keywords = [
    "deep learning",
    "ensemble",
    "semi-supervised learning",
    "softmax",
]


[project.urls]
Source = "https://github.com/ambroiseodt/tsim"

[project.optional-dependencies]
dev = ['pytest']

[tool.setuptools]
license-files = ['LICEN[CS]E*', 'COPYING*', 'NOTICE*', 'AUTHORS*']

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
log_level = "DEBUG"

[tool.coverage.run]
source = ["src"]

[tool.mypy]
files = "src"
plugins = "numpy.typing.mypy_plugin"
check_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = true
no_implicit_optional = false
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true